--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
     --clr-dark: #303030;
     --clr-accent: #16e0bd;
 
-    --fs-h1: 3rem;
+    --fs-h1: 5rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
@@ -57,6 +57,31 @@ section {
  }
 
  strong { font-weight: var(--fw-bold) }
+
+ :focus {
+     outline: 3px solid var(--clr-accent);
+     outline-offset: 3px;
+ }
+
+ /* Buttons */
+
+ .btn {
+     display: inline-block;
+     padding: .5em 2.5em;
+     background: var(--clr-accent);
+     color: var(--clr-dark);
+     text-decoration: none;
+     cursor: pointer;
+     font-size: .8rem;
+     text-transform: uppercase;
+     letter-spacing: 2px;
+     font-weight: var(--fw-bold);
+     transition: transform 200ms ease-in-out;
+    }
+
+    .btn:hover {
+        transform: scale(1.1);
+    }
 
  /* Typography */
 
@@ -100,7 +125,7 @@ section {
 
   /* header */
 
-nav { display: none }
+nav { display: none; }
 
 
   /* Intro section */
@@ -114,9 +139,7 @@ nav { display: none }
 }
 
 .section__subtitle--intro {
-    display:inline-block;
-}
-
+    display: inline-block;
 }
 
   @media (min-width: 600px) {
@@ -124,7 +147,7 @@ nav { display: none }
         display: grid;
         width: min-content;
         margin: 0 auto;
-        grid-column-gap: 1em;
+        grid-column-gap: 3em;
         grid-template-areas: 
             "img title"
             "img subtitle";
@@ -148,3 +171,52 @@ nav { display: none }
           width: calc(100% + 1.5em);
       }
   }
+
+  /* My services section */
+
+  .my-services {
+      background-color: var(--clr-dark);
+      background-image: url(../img/services-bg.jpg);
+      background-size: cover;
+      /* background-blend-mode: multiply; */
+      color: var(--clr-light);
+      text-align: center;
+  }
+
+  .section__title--services {
+      color: var(--clr-accent);
+      position: relative;
+  }
+
+  .section__title--services::after {
+      content: '';
+      display: block;
+      width: 2em;
+      height: 1px;
+      margin: 0.5em auto 1em;
+      background: var(--clr-light);
+      opacity: 0.25;
+  }
+
+  .services {
+    margin-bottom: 4em;
+  }
+
+  .service {
+      max-width: 500px;
+      margin: 0 auto;
+  }
+
+  @media (min-width: 800px) {
+      .services {
+          display: flex;
+          max-width: 1000px;
+          margin-left: auto;
+          margin-right: auto;
+      }
+
+      .service + .service {
+          margin-left: 2em;
+      }
+  }
+
